# python_test_task

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: init.sql  test.xml
src/python_test_task/: main.py
tests/python_test_task/: test_main.py
