[project]
name = "python-test-task"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Dmitry Bleschunov", email = "bleschunov.dmitry@gmail.com"},
]
dependencies = [
    "lxml>=5.2.1",
    "tqdm>=4.66.2",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "pre-commit>=3.7.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
